# OpenGL-CMake-Template

./: .gitignore  CMakeLists.txt  main.cpp
assets/shaders/fragment/: default.fs  default.glsl
assets/shaders/vertex/: default.glsl  default.vs
include/: camera.hpp  debug_render.hpp  game.h  game.hpp  macros.h  opengl.h  render_system.h  render_system.hpp  resource_manager.hpp  scene.hpp  scene_demo.hpp  shader.h  shader.hpp  system_events.h  texture2d.hpp  viewport.h  viewport.hpp
include/demo/: scene_demo.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: game.cpp  main.cpp  render_system.cpp  resource_manager.cpp  scene_demo.cpp  shader.cpp  system_events.cpp
src/demo/: scene_demo.cpp
